--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.6.1",
+    "mdb-react-ui-kit": "^3.0.0",
     "moment": "^2.29.1",
     "process": "^0.11.10",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^4.0.1",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "simple-react-lightbox": "^3.6.9-0",
     "uuid": "^8.3.2",
